kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: smartims
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres
        image: postgres:16

        ports:
        - containerPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartims-backend
  namespace: smartims

spec:
  replicas: 1

  selector:
    matchLabels:
      app: smartims-backend

  template:
    metadata:
      labels:
        app: smartims-backend

    spec:
      containers:

      - name: backend
        image: vishal29docker/smartims-backend:v1

        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartims-frontend
  namespace: smartims

spec:
  replicas: 1

  selector:
    matchLabels:
      app: smartims-frontend

  template:
    metadata:
      labels:
        app: smartims-frontend

    spec:
      containers:

      - name: frontend
        image: vishal29docker/smartims-frontend:v3

        ports:
        - containerPort: 80
