kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: smartims

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432

  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: smartims

spec:
  selector:
    app: smartims-backend

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: smartims

spec:
  selector:
    app: smartims-frontend

  ports:
    - port: 80
      targetPort: 80

  type: LoadBalancer
